argoFiles/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
  annotations:
    argocd-image-updater.argoproj.io/image-list: my-api=us-central1-docker.pkg.dev/YOUR_PROJECT_ID/my-repo/simple-api
    argocd-image-updater.argoproj.io/my-api.update-strategy: latest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: us-central1-docker.pkg.dev/moonlit-shadow-469016-h0/my-repo/simple-api:latest
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  selector:
    app: api
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
